feat: добавить режим обновления версии сценария для ботов
